Add niceties from sloria/cookiecutter-pypackage.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ pip-log.txt
 .coverage
 .tox
 nosetests.xml
-htmlcov
 
 # Translations
 *.mo
@@ -41,3 +40,6 @@ output/*/index.html
 
 # Sphinx
 docs/_build
+README.html
+
+_sandbox
