--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[wheel]
+# This flag says that the code is written to work on both Python 2 and Python
+# 3. If at all possible, it is good practice to do this. If you cannot, you
+# will need to generate wheels for each Python version that you support.
+universal=1
+
 # E127: continuation line over-indented for visual indent
 # E128: continuation line under-indented for visual indent
 # E265: block comment should start with #
