--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ python:
   - "3.4"
   - "pypy"
 
+env:
+  - PYTHONPATH=tests/testapp
+
 install:
   - pip install -U -r dev-requirements.txt
   - pip install -U .
