--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 python_files = test*.py
 django_find_project = false
 python_paths = tests/testapp
+addopts=--cov nplusone --cov-report term-missing
 DJANGO_SETTINGS_MODULE = testapp.settings
