--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,22 @@ python:
   - "pypy"
 
 env:
-  - PYTHONPATH=tests/testapp
+  global:
+    - PYTHONPATH=tests/testapp
+  matrix:
+    - DJANGO_VERSION=1.8.2
+    - DJANGO_VERSION=1.7.8
 
 before_install:
   - travis_retry pip install codecov
 
 install:
   - travis_retry pip install -U -r dev-requirements.txt
+  - travis_retry pip install -U django==$DJANGO_VERSION
   - travis_retry pip install -U .
 
 before_script:
-    - flake8 .
+  - flake8 .
 
 script: py.test
 
