--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,26 @@
 [tox]
-envlist =py27,py33,py34,pypy
+envlist={py27,py33,py34,py35,pypy}-{django17,django18}
+
 [testenv]
 deps=
-    -rdev-requirements.txt
+    ; Testing
+    mock
+    pytest
+    WebTest
+    pytest-cov
+    pytest-django
+    pytest-pythonpath
+    django-webtest
+    flake8
+
+    ; ORMs
+    SQLAlchemy
+    Flask-SQLAlchemy
+    peewee
+
+    ; Django variants
+    django17: django>=1.7,<1.8
+    django18: django>=1.8,<1.9
 commands=
     flake8 .
     py.test
