--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,pypy}-{django17,django18}
+envlist={py27,py33,py34,py35,pypy}-{django17,django18,django19}
 
 [testenv]
 deps=
@@ -21,6 +21,7 @@ deps=
     ; Django variants
     django17: django>=1.7,<1.8
     django18: django>=1.8,<1.9
+    django19: django==1.9b1
 commands=
     flake8 .
     py.test
