--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
 
 matrix:
   exclude:
+    - python: "3.3"
+      env: DJANGO_VERSION="==1.9b1"
     - python: "3.5"
       env: DJANGO_VERSION=">=1.7,<1.8"
 
