Update Django versions.

--- a/tox.ini
+++ b/tox.ini
@@ -18,10 +18,10 @@ deps=
     Flask-SQLAlchemy
     peewee
 
-    ; Django variants
+    ; Django versions
     django17: django>=1.7,<1.8
     django18: django>=1.8,<1.9
-    django19: django==1.9b1
+    django18: django>=1.9,<1.10
 commands=
     flake8 .
     py.test
