--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ env:
   matrix:
     - DJANGO_VERSION=">=1.7,<1.8"
     - DJANGO_VERSION=">=1.8,<1.9"
-    - DJANGO_VERSION="==1.9b1"
+    - DJANGO_VERSION=">=1.9,<1.10"
 
 matrix:
   exclude:
     - python: "3.3"
-      env: DJANGO_VERSION="==1.9b1"
+      env: DJANGO_VERSION=">=1.9,<1.10"
     - python: "3.5"
       env: DJANGO_VERSION=">=1.7,<1.8"
 
