--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,pypy}-{django17,django18,django19}
+envlist={py27,py33,py34,py35,pypy}-{django18,django19}
 
 [testenv]
 deps=
@@ -19,7 +19,6 @@ deps=
     peewee
 
     ; Django versions
-    django17: django>=1.7,<1.8
     django18: django>=1.8,<1.9
     django18: django>=1.9,<1.10
 commands=
