Add Django 1.10 beta to tests.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,pypy}-{django18,django19}
+envlist={py27,py33,py34,py35,pypy}-{django18,django19,django110}
 
 [testenv]
 deps=
@@ -20,7 +20,8 @@ deps=
 
     ; Django versions
     django18: django>=1.8,<1.9
-    django18: django>=1.9,<1.10
+    django19: django>=1.9,<1.10
+    django110: django==1.10b1
 commands=
     flake8 .
     py.test
