--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,14 @@ env:
   matrix:
     - DJANGO_VERSION=">=1.8,<1.9"
     - DJANGO_VERSION=">=1.9,<1.10"
-    - DJANGO_VERSION="==1.10b1"
+    - DJANGO_VERSION=">=1.10,<1.11"
 
 matrix:
   exclude:
     - python: "3.3"
       env: DJANGO_VERSION=">=1.9,<1.10"
     - python: "3.3"
-      env: DJANGO_VERSION="==1.10b1"
+      env: DJANGO_VERSION=">=1.10,<1.11"
 
 before_install:
   - travis_retry pip install codecov
