--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps=
     ; Django versions
     django18: django>=1.8,<1.9
     django19: django>=1.9,<1.10
-    django110: django==1.10b1
+    django110: django>=1.10,<1.11
 commands=
     flake8 .
     py.test
