--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  - "3.6"
   - "pypy"
 
 env:
@@ -16,6 +17,7 @@ env:
     - DJANGO_VERSION=">=1.8,<1.9"
     - DJANGO_VERSION=">=1.9,<1.10"
     - DJANGO_VERSION=">=1.10,<1.11"
+    - DJANGO_VERSION=">=1.11,<2.0"
 
 matrix:
   exclude:
@@ -23,6 +25,8 @@ matrix:
       env: DJANGO_VERSION=">=1.9,<1.10"
     - python: "3.3"
       env: DJANGO_VERSION=">=1.10,<1.11"
+    - python: "3.3"
+      env: DJANGO_VERSION=">=1.11,<2.0"
 
 before_install:
   - travis_retry pip install codecov
