--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,pypy}-{django18,django19,django110}
+envlist={py27,py33,py34,py35,py36,pypy}-{django18,django19,django110,django111}
 
 [testenv]
 deps=
@@ -22,6 +22,7 @@ deps=
     django18: django>=1.8,<1.9
     django19: django>=1.9,<1.10
     django110: django>=1.10,<1.11
+    django111: django>=1.11,<2.0
 commands=
     flake8 .
     py.test
