--- a/.travis.yml
+++ b/.travis.yml
@@ -3,41 +3,37 @@ language: python
 sudo: false
 
 python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "pypy"
+- "2.7"
+- "3.6"
+- "pypy"
 
 env:
   global:
-    - PYTHONPATH=tests/testapp
+  - PYTHONPATH=tests/testapp
   matrix:
-    - DJANGO_VERSION=">=1.8,<1.9"
-    - DJANGO_VERSION=">=1.9,<1.10"
-    - DJANGO_VERSION=">=1.10,<1.11"
-    - DJANGO_VERSION=">=1.11,<2.0"
+  - DJANGO_VERSION=">=1.8,<1.9"
+  - DJANGO_VERSION=">=1.9,<1.10"
+  - DJANGO_VERSION=">=1.10,<1.11"
+  - DJANGO_VERSION=">=1.11,<2.0"
+  - DJANGO_VERSION="==2.0b1"
 
 matrix:
   exclude:
-    - python: "3.3"
-      env: DJANGO_VERSION=">=1.9,<1.10"
-    - python: "3.3"
-      env: DJANGO_VERSION=">=1.10,<1.11"
-    - python: "3.3"
-      env: DJANGO_VERSION=">=1.11,<2.0"
+  - python: "2.7"
+    env: DJANGO_VERSION="==2.0b1"
+  - python: "pypy"
+    env: DJANGO_VERSION="==2.0b1"
 
 before_install:
-  - travis_retry pip install codecov
+- travis_retry pip install codecov
 
 install:
-  - travis_retry pip install -U -r dev-requirements.txt
-  - travis_retry pip install -U "django$DJANGO_VERSION"
-  - travis_retry pip install -U .
+- travis_retry pip install -U -r dev-requirements.txt
+- travis_retry pip install -U "django$DJANGO_VERSION"
+- travis_retry pip install -U .
 
 before_script:
-  - flake8 .
+- flake8 .
 
 script: pytest
 
