--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,py36,pypy}-{django18,django19,django110,django111}
+envlist={py27,py33,py34,py35,py36,pypy}-{django18,django19,django110,django111,django20}
 
 [testenv]
 deps=
@@ -23,6 +23,7 @@ deps=
     django19: django>=1.9,<1.10
     django110: django>=1.10,<1.11
     django111: django>=1.11,<2.0
+    django20: django==2.0b1
 commands=
     flake8 .
     py.test
