--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps=
     django19: django>=1.9,<1.10
     django110: django>=1.10,<1.11
     django111: django>=1.11,<2.0
-    django20: django==2.0b1
+    django20: django>=2.0,<2.1
 commands=
     flake8 .
     py.test
