Drop pypy support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,py36,pypy}-{django18,django19,django110,django111,django20}
+envlist={py27,py33,py34,py35,py36}-{django18,django19,django110,django111,django20}
 
 [testenv]
 deps=
