--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ env:
   - DJANGO_VERSION=">=1.10,<1.11"
   - DJANGO_VERSION=">=1.11,<2.0"
   - DJANGO_VERSION=">=2.0,<2.1"
+  - DJANGO_VERSION=">=2.1,<2.2"
 matrix:
   exclude:
   - python: "2.7"
     env: DJANGO_VERSION=">=2.0,<2.1"
+  - python: "2.7"
+    env: DJANGO_VERSION=">=2.1,<2.2"
 install:
 - travis_retry pip install codecov
 - travis_retry pip install -U -r dev-requirements.txt
