--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,py36}-{django18,django19,django110,django111,django20}
+envlist={py27,py33,py34,py35,py36}-{django18,django19,django110,django111,django20,django21}
 
 [testenv]
 deps=
@@ -24,6 +24,7 @@ deps=
     django110: django>=1.10,<1.11
     django111: django>=1.11,<2.0
     django20: django>=2.0,<2.1
+    django21: django>=2.1,<2.2
 commands=
     flake8 .
     py.test
