--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ universal=1
 # E265: block comment should start with #
 # E301: expected 1 blank line, found 1
 # E302: expected 2 blank lines, found 0
+# W504: line break after binary operator
 [flake8]
-ignore = E127,E128,E265,E301,E302,E305,E306
+ignore = E127,E128,E265,E301,E302,E305,E306,W504
 max-line-length = 90
