--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist={py27,py33,py34,py35,py36}-{django18,django19,django110,django111,django20,django21}
+envlist={py37,py38,py39}-{django22,django31,django32}
 
 [testenv]
 deps=
@@ -19,12 +19,9 @@ deps=
     peewee
 
     ; Django versions
-    django18: django>=1.8,<1.9
-    django19: django>=1.9,<1.10
-    django110: django>=1.10,<1.11
-    django111: django>=1.11,<2.0
-    django20: django>=2.0,<2.1
-    django21: django>=2.1,<2.2
+    django22: django>=2.2,<3.0
+    django31: django>=3.1,<3.2
+    django32: django>=3.2,<4.0
 commands=
     flake8 .
     py.test
